[package]
name = "users-gestion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "usersGestion"
path = "src/lib.rs"

[dependencies]
mussh-protocol = { path = "../mussh-protocol" }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64ct = "1.6.0"
derive = "1.0.0"
pkcs1 = "0.7.5"
rand = "0.8.5"
rsa = {version = "0.9.6", features = ["serde","sha2","pem"]}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
spki = "0.7.3"
zeroize = { version = "1.0.198", features = ["derive"] }
